
syntax = "proto3";

option csharp_namespace = "ConsoleGrpcClient.Protos";
package Auth;

service AuthService {

    rpc GetUser (UserRequest) returns (UserResponse);

}


message UserRequest {

    string PhoneNumber = 1;
  
}


message UserResponse {

    string UserId = 1;

    string FirstName = 2;

    string MiddleName = 3;

    string LastName = 4;

    string EmailAddress= 5;

    string AdmissionNumber= 6;

    string NationalIdentificationNumber=7; 

    string SchoolName =8;

    string DepartmentName= 9;

    string EnrolledCourse=10;

    string YearOfStudy=11;

    string SponsorshipType=12; 
 
    string County=13; 
}



